WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275657
[GStreamer] Error building with libwebrtc enabled with gstreamer 1.18
https://bugs.webkit.org/show_bug.cgi?id=275657
Summary
[GStreamer] Error building with libwebrtc enabled with gstreamer 1.18
Miguel Gomez
Reported
2024-06-19 01:03:46 PDT
According to the GStreamer checks, the required GStreamer version is 1.18.4 (with 1.20 for USE_GSTREAMER_WEBRTC, ENABLE_MEDIA_RECORDER and USE_GSTREAMER_TRANSCODER). But the build enabling libwebrtc fails due to the usage of gst_buffer_new_memdup in Source/WebCore/platform/mediastream/libwebrtc/gstreamer/RealtimeIncomingAudioSourceLibWebRTC.cpp, which is not available on 1.18.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-06-19 01:59:53 PDT
in downstream wpe-2.38 this is fixed by commit 5f7400aee390ab9d964a0f2ede34f2008e75eaf8
Miguel Gomez
Comment 2
2024-06-19 02:07:04 PDT
(In reply to Philippe Normand from
comment #1
)
> in downstream wpe-2.38 this is fixed by commit > 5f7400aee390ab9d964a0f2ede34f2008e75eaf8
Shouldn't this upstreamed? Or are we keeping this downstream?
Philippe Normand
Comment 3
2024-06-19 05:06:02 PDT
It's fine to upstream... Wasn't needed until now because the SDK ships a recent version, and I suppose you're not using it.
Philippe Normand
Comment 4
2024-06-19 05:20:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29979
EWS
Comment 5
2024-06-21 05:20:34 PDT
Committed
280247@main
(1b86aba5013c): <
https://commits.webkit.org/280247@main
> Reviewed commits have been landed. Closing PR #29979 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug