[GStreamer] Error building with libwebrtc enabled with gstreamer 1.18 https://bugs.webkit.org/show_bug.cgi?id=275657

Reviewed by Xabier Rodriguez-Calvar.

Fix LibWebRTC build for GStreamer versions older than 1.20.

* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
(gst_buffer_new_memdup):
* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h:

Canonical link: https://commits.webkit.org/280247@main