Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp
@@ -1399,4 +1399,13 @@ GRefPtr<GstBuffer> wrapSpanData(const std::span<const uint8_t>& span)
 
 #undef IS_GST_FULL_1_18
 
+#if !GST_CHECK_VERSION(1, 20, 0)
+GstBuffer* gst_buffer_new_memdup(gconstpointer data, gsize size)
+{
+    gpointer copiedData = g_memdup2(data, size);
+
+    return gst_buffer_new_wrapped_full(static_cast<GstMemoryFlags>(0), copiedData, size, 0, size, copiedData, g_free);
+}
+#endif
+
 #endif // USE(GSTREAMER)
